--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^5.2.1",
     "multer": "^2.0.2",
     "stl-repair": "^0.0.3",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "uuid": "^13.0.0"
   }
 }
